[package]
name = "async-ebpf"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Async-friendly, fully preemptive userspace eBPF runtime"
authors = ["Heyang Zhou <zhy20000919@hotmail.com>"]
license = "Apache-2.0"

[[bench]]
name = "bench"
harness = false
required-features = ["testing"]

[features]
default = []
testing = ["anyhow", "tokio", "rand/default"]

[dependencies]
anyhow = { version = "1", optional = true }
corosensei = { version = "0.1", default-features = false, features = [
  "default-stack",
] }
elf = "0.7"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
libc = "0.2"
memmap2 = "0.9"
parking_lot = "0.12"
rand = { version = "0.8", default-features = false }
rand_chacha = "0.3"
scopeguard = "1"
thiserror = "1"
tokio = { version = "1", optional = true, features = ["full"] }
tracing = "0.1"

[build-dependencies]
bindgen = "0.72"
cmake = "0.1"

[dev-dependencies]
async-ebpf = { path = ".", features = ["testing"] }
criterion = { version = "0.5", features = ["async_tokio"] }
tracing-test = "0.2"
